Ensured wrapped will always fit iframe

--- a/css/master.css
+++ b/css/master.css
@@ -19,7 +19,7 @@ h1{
 }
 
 .wrapper-full {
-  max-height: 100rem !important;
+  max-height: 800rem !important;
 }
 
 .wrapper {
